force-app/main/default/objects/ARF_Dispute__c/ARF_Dispute__c.object-meta.xml
<CustomObject>
    <description>Dispute records for tracking invoice disputes through resolution</description>
    <label>AR Dispute</label>
    <nameField>
        <displayFormat>ARF-{0000}</displayFormat>
        <label>AR Dispute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Disputes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>