force-app/main/default/objects/ARF_Dispute__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that raised the dispute</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AR_Disputes</relationshipLabel>
    <relationshipName>AR_Disputes</relationshipName>
    <type>Lookup</type>
</CustomField>