force-app/main/default/objects/ARF_Dispute__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User responsible for resolving this dispute</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned_Disputes</relationshipLabel>
    <relationshipName>Assigned_Disputes</relationshipName>
    <type>Lookup</type>
</CustomField>