force-app/main/default/objects/ARF_Dispute__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Type of dispute</description>
    <label>Dispute Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Pricing</fullName><default>false</default><label>Pricing</label></value>
                <value><fullName>Shortage</fullName><default>false</default><label>Shortage</label></value>
                <value><fullName>Quality</fullName><default>false</default><label>Quality</label></value>
                <value><fullName>Delivery</fullName><default>false</default><label>Delivery</label></value>
                <value><fullName>Duplicate</fullName><default>false</default><label>Duplicate</label></value>
                <value><fullName>Damaged</fullName><default>false</default><label>Damaged</label></value>
                <value><fullName>Unauthorized</fullName><default>false</default><label>Unauthorized</label></value>
                <value><fullName>Tax</fullName><default>false</default><label>Tax</label></value>
                <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>