force-app/main/default/objects/ARF_Dispute__c/fields/Credit_Memo_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Amount__c</fullName>
    <description>Amount credited to resolve dispute</description>
    <label>Credit Memo Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>