force-app/main/default/objects/ARF_Dispute__c/fields/Credit_Memo_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Number__c</fullName>
    <description>Credit memo document number</description>
    <label>Credit Memo Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>