force-app/main/default/objects/ARF_Dispute__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the dispute</description>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>