force-app/main/default/objects/ARF_Dispute__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice being disputed</description>
    <label>Invoice</label>
    <referenceTo>ARF_Invoice__c</referenceTo>
    <relationshipLabel>Disputes</relationshipLabel>
    <relationshipName>Disputes</relationshipName>
    <type>Lookup</type>
</CustomField>