force-app/main/default/objects/ARF_Dispute__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Dispute priority level</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>High</fullName><default>false</default><label>High</label></value>
                <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
                <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>