force-app/main/default/objects/ARF_Dispute__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <description>Detailed reason code for the dispute</description>
    <label>Reason Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>