force-app/main/default/objects/ARF_Dispute__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>Notes on how the dispute was resolved</description>
    <label>Resolution Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>