force-app/main/default/objects/ARF_Dispute__c/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <description>How the dispute was resolved</description>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Full Credit</fullName><default>false</default><label>Full Credit</label></value>
                <value><fullName>Partial Credit</fullName><default>false</default><label>Partial Credit</label></value>
                <value><fullName>Denied</fullName><default>false</default><label>Denied</label></value>
                <value><fullName>Write Off</fullName><default>false</default><label>Write Off</label></value>
                <value><fullName>Return Replace</fullName><default>false</default><label>Return Replace</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>