force-app/main/default/objects/ARF_Dispute__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>Root cause for analytics</description>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Pricing Error</fullName><default>false</default><label>Pricing Error</label></value>
                <value><fullName>Shipping Error</fullName><default>false</default><label>Shipping Error</label></value>
                <value><fullName>Quality Issue</fullName><default>false</default><label>Quality Issue</label></value>
                <value><fullName>System Error</fullName><default>false</default><label>System Error</label></value>
                <value><fullName>Customer Error</fullName><default>false</default><label>Customer Error</label></value>
                <value><fullName>Vendor Error</fullName><default>false</default><label>Vendor Error</label></value>
                <value><fullName>Process Gap</fullName><default>false</default><label>Process Gap</label></value>
                <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>