force-app/main/default/objects/ARF_Dispute__c/fields/Routed_To_Team__c.field-meta.xml
<CustomField>
    <fullName>Routed_To_Team__c</fullName>
    <description>Team responsible for resolution</description>
    <label>Routed To Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Sales</fullName><default>false</default><label>Sales</label></value>
                <value><fullName>Warehouse</fullName><default>false</default><label>Warehouse</label></value>
                <value><fullName>Quality</fullName><default>false</default><label>Quality</label></value>
                <value><fullName>Logistics</fullName><default>false</default><label>Logistics</label></value>
                <value><fullName>Billing</fullName><default>false</default><label>Billing</label></value>
                <value><fullName>Finance</fullName><default>false</default><label>Finance</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>