force-app/main/default/objects/ARF_Dispute__c/fields/SLA_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Date__c</fullName>
    <description>Date by which dispute must be resolved</description>
    <label>SLA Due Date</label>
    <type>Date</type>
</CustomField>