force-app/main/default/objects/ARF_Dispute__c/fields/SLA_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>SLA_Days_Remaining__c</fullName>
    <description>Days remaining until SLA breach</description>
    <label>SLA Days Remaining</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>