force-app/main/default/objects/ARF_Dispute__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current dispute status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>New</fullName><default>false</default><label>New</label></value>
                <value><fullName>Under Investigation</fullName><default>false</default><label>Under Investigation</label></value>
                <value><fullName>Pending Approval</fullName><default>false</default><label>Pending Approval</label></value>
                <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
                <value><fullName>Denied</fullName><default>false</default><label>Denied</label></value>
                <value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value>
                <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>